# Pinak_Projects

./: .coverage  .gitignore  .pre-commit-config.yaml  .semgrep.yml  .semgrepignore  ANALYSIS_REPORT.md  ARCHITECTURE_ANALYSIS.md  ASSESSMENT.md  CHANGELOG.md  CONTRIBUTING.md  FINAL_MERGE_STATUS.txt  INTEGRATION_README.md  LICENSE  MERGE_REPORT.md  Makefile  PROJECT_STATUS.md  Pinak Bridge.spec  Pinakontext_SOTA_Plan.md  README.md  SECURITY.md  bandit_report.txt  clean_imports.py  cli_smoke.sh  demo_world_beating.py  development_log.md  fix_ci_issues.py  fix_demo.py  integrate_pinak.py  memory_integration.py  mock_server.py  monitoring_dashboard.py  pinak_config.json  pinak_enterprise_reference.md  pyproject 2.toml  pyproject.toml  pytest.ini  requirements.txt  run_all.sh  semgrep_local.json  setup.py  (+9 more)
Pinak_Services/memory_service/: .gitignore  ACCESS_POLICY.md  AGENTS.md  ANALYSIS.md  ASSESSMENT_REPORT.md  CLAUDE.md  CODEBASE_ASSESSMENT.md  Dockerfile  ENTERPRISE_ASSESSMENT.md  ENTERPRISE_ROADMAP.md  FRESH_ASSESSMENT.md  README.md  benchmark_add_semantic.py  benchmark_vs.py  inspect_vectors.py  pinak-memory  pinak_memory  pyproject.toml  pytest.ini  requirements.txt  test_batch.py  test_batch_2.py  test_index  test_memory_flow.py
Pinak_Services/memory_service/.jules/: bolt.md
Pinak_Services/memory_service/app/: dependencies.py  embedder.py  main.py
Pinak_Services/memory_service/cli/: doctor.py  main.py  tui.py
Pinak_Services/memory_service/client/: pinak_memory_mcp.py
Pinak_Services/memory_service/data/: memory.db  memory.faiss  metadata.json  vectors.index  (+1 more)
(+307 files in other folders)
